p3/confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground-service
  namespace: dev
spec:
  type: ClusterIP
  ports:
  - port: 8888
    targetPort: 8888
    protocol: TCP
  selector:
    app: wil-playground
